welcome.lessons.welcome.array.averagevalue.AverageValue.scala.error
averageValue:6: error: not found: value i
	while ( i < nums.length) {
                ^averageValue:7: error: not found: value i
		I = I + nums(i)
                             ^averageValue:8: error: not found: value i
		i = i + 1
                ^